--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mongoose": "^4.10.6",
     "mongoose-findorcreate": "^2.0.0",
     "slug": "^0.9.1",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "socket.io-mongodb": "^1.1.1",
+    "socket.io-redis": "^5.1.0"
   }
 }
